[tool.poetry]
name = "fsspreadsheet"
version = "0.9.0"
description = "Fable library for Python"
authors = ["Heinrich Lukas Weil <weil@rptu.de>","Kevin Frey <>", "Oliver Maus <>"]
license = "MIT License"
readme = "README.md"
homepage = "https://fslab.org/FsSpreadsheet/"

[tool.poetry.dependencies]
python = ">= 3.10, < 4.0"
openpyxl = ">=3.1.2"
et-xmlfile = ">=1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"