[tool.poetry]
name = "fsspreadsheet"
version = "6.3.1"
description = "Fable library for Spreadsheet creation and manipulation"
authors = ["Heinrich Lukas Weil <hlweil@outlook.de>", "Kevin Frey <freymaurer@gmx.de>"]
maintainers = ["Oliver Maus"]
license = "MIT License"
readme = "README.md"
homepage = "https://fslab.org/FsSpreadsheet/"
repository = "https://github.com/fslaborg/FsSpreadsheet"
documentation = "https://fslab.org/FsSpreadsheet/"

[tool.poetry.dependencies]
python = ">= 3.11, < 4.0"
openpyxl = ">=3.1.2"
et-xmlfile = ">=1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"